workspace-sf/force-app/main/default/objects/ArquivoECM__x/ArquivoECM__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$arquivoecm</externalName>
    <label>Arquivo ECM</label>
    <pluralLabel>Arquivos ECM</pluralLabel>
</CustomObject>