workspace-sf/force-app/main/default/objects/ArquivoECM__x/fields/CNPJparceiro__c.field-meta.xml
<CustomField>
    <fullName>CNPJparceiro__c</fullName>
    <externalDeveloperName>cnpjparceiro</externalDeveloperName>
    <label>CNPJ parceiro</label>
    <length>18</length>
    <type>Text</type>
</CustomField>