workspace-sf/force-app/main/default/objects/ArquivoECM__x/fields/DataArquivo__c.field-meta.xml
<CustomField>
    <fullName>DataArquivo__c</fullName>
    <externalDeveloperName>dataarquivo</externalDeveloperName>
    <label>Data arquivo</label>
    <type>Date</type>
</CustomField>