workspace-sf/force-app/main/default/objects/ArquivoECM__x/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <externalDeveloperName>lote</externalDeveloperName>
    <label>Lote</label>
    <length>32</length>
    <type>Text</type>
</CustomField>