workspace-sf/force-app/main/default/objects/ArquivoECM__x/fields/Nome__c.field-meta.xml
<CustomField>
    <fullName>Nome__c</fullName>
    <externalDeveloperName>nome</externalDeveloperName>
    <label>Nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>