workspace-sf/force-app/main/default/objects/ArquivoECM__x/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <externalDeveloperName>tipo</externalDeveloperName>
    <label>Tipo</label>
    <length>32</length>
    <type>Text</type>
</CustomField>